spectec/test/elab/neg/parse-stray-printable.spectec
;; An ASCII printable character that has no token mapping.

@
